Fix image position on mobile

--- a/source/sass/components/_custom.scss
+++ b/source/sass/components/_custom.scss
@@ -12,3 +12,7 @@ h4 {
 p {
   font-size: 16px;
 }
+
+img {
+  max-width: 100%;
+}
